(HP-1425) Fix element shift when error is displayed
When phone number input has an error element, country code element size changes

This is due the parent element uses same styles as the address input container

Added overrides to the styles with a new class

Changed button component prop 'alignWithLabeledInputs' to 'alignLeft'

--- a/src/common/cssHelpers/form.module.css
+++ b/src/common/cssHelpers/form.module.css
@@ -205,20 +205,4 @@
     padding-top: 28px;
     align-items: start;
   }
-
-  .phone-number-wrapper {
-    width: 100%;
-    display: flex;
-    flex-grow: 1;
-  }
-
-  .country-calling-code-dropdown {
-    margin-right: var(--spacing-m);
-    width: 40%;
-    min-width: 200px;
-  }
-
-  .phone-number {
-    flex-grow: 1;
-  }
 }
